--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,13 @@ body {
     margin-top: -60px;
     color: rgba(250, 235, 215, 0.9);
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    @media (max-width: 430px) {
+        margin-left: 10px;
+        margin-top: -80px;
+    };
 }
+
+
 .input {
     padding: 10px;
     margin-top: 10px;
