--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,40 @@ body {
     font-weight: 600;
     font-style: normal;
 }
+
+.header {
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 95%;
+    font-size: 30px;
+    margin-top: -70px;
+    color: rgba(250, 235, 215, 0.9);
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    @media (max-width: 595px) {
+        margin-top: -80px;
+    };
+    @media (max-width: 445px) {
+        margin-top: -110px;
+    };
+}
+
+.title {
+    justify-content: center;
+    align-items: center;
+}
+
+.main-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-buttons button{
+    margin-left: 15px;
+}
+
 .wrapper {
     margin-top: 80px;
     width: 95%;
@@ -18,33 +52,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 30px;
-}
-.title {
-    position: absolute;
-    font-size: 30px;
-    margin-top: -60px;
-    color: rgba(250, 235, 215, 0.9);
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-    @media (max-width: 430px) {
-        margin-left: 10px;
-        margin-top: -80px;
+    border-radius: 20px;
+    @media (max-width: 445px) {
+        margin-top: 100px;
     };
 }
-
 
 .input {
     padding: 10px;
     margin-top: 10px;
     border: 1px solid #cccccc;
     border-radius: 10px;
-    width: 97%;
+    width: 100%;
     box-sizing: border-box;
     background-color: rgba(250, 235, 215, 0.7);
     text-align: center;
     color: rgba(0, 0, 0, 0.7);
     cursor: text;
 }
+
 input:focus {
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
     outline: none;
@@ -52,8 +78,6 @@ input:focus {
 }
 
 .removal-pad {
-    min-height: 20px;
-    margin: 3px 11px 0px 11px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -81,6 +105,7 @@ button {
 }
 
 #secretVendor {
+    color: black;
     background-color: rgb(255, 230, 0);
     box-shadow: 0 0 5px rgb(255, 230, 0);
 }
